@@ -1,3 +1,8 @@
+6/5/2005
+	- Explictly register record type implementations instead of
+	  using reflection; this should prevent hard to diagnose
+	  problems resulting from partial compilation.
+
 5/31/2005
 	- 2.0.0 released.
 
